<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:descendantFocusability="blocksDescendants" android:id="@+id/row_layout">

    <Button
            android:id="@+id/pauseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pause"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/cancelButton"
            android:layout_toStartOf="@+id/cancelButton"
            android:layout_toRightOf="@+id/downloadFileName"
            android:layout_toEndOf="@+id/downloadFileName"/>
    <Button android:id="@+id/resumeButton" android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resume"
            android:layout_alignParentTop="true"
            android:visibility="invisible"
            android:layout_toStartOf="@+id/cancelButton" android:layout_toLeftOf="@+id/cancelButton"/>

    <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_alignParentTop="true" android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>
    <TextView
            android:id="@+id/downloadFileName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="" android:layout_toLeftOf="@+id/resumeButton"
            android:layout_toStartOf="@+id/resumeButton"/>
    <ProgressBar
            android:id="@+id/downloadProgressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/downloadFileName"
            android:layout_toLeftOf="@+id/pauseButton" android:layout_toStartOf="@+id/pauseButton"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:id="@+id/status"
                android:layout_alignBottom="@+id/pauseButton" android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" android:layout_toLeftOf="@+id/pauseButton"
                android:layout_toStartOf="@+id/pauseButton" android:textColor="#ff1c4bff"/>
</RelativeLayout>